force-app/main/default/objects/LPCR_ModificationEntrante__c/LPCR_ModificationEntrante__c.object-meta.xml
<CustomObject>
    <description>Cet objet nous permettra de collecter les données en provenance d&apos;Intranet et de la GTA  concernant des événements et liés à de l&apos;usage sur SF (absences, heures déduites, maladie ...)</description>
    <label>Modification Entrante</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modifications Entrantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>