force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>