force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>Date de modification</label>
    <type>DateTime</type>
</CustomField>