force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_CodePostal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostal__c</fullName>
    <label>Code postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>