force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Commentaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Commentaire__c</fullName>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>