force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Modifications Entrantes</relationshipLabel>
    <relationshipName>RelationModificationEntranteCompte</relationshipName>
    <type>Lookup</type>
</CustomField>