force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Contact__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enfant, Parent 1 et 2</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Modifications Entrantes</relationshipLabel>
    <relationshipName>RelationModificationEntranteContact</relationshipName>
    <type>Lookup</type>
</CustomField>