force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Contract__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrat Salesforce</description>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Modifications Entrantes</relationshipLabel>
    <relationshipName>RelationModificationEntranteContrat</relationshipName>
    <type>Lookup</type>
</CustomField>