force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Date__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>