force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_DateEffet__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEffet__c</fullName>
    <label>DateEffet</label>
    <type>Date</type>
</CustomField>