force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Devis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Modifications Entrantes</relationshipLabel>
    <relationshipName>RelationModificationEntranteDevis</relationshipName>
    <type>Lookup</type>
</CustomField>