force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_EtatTraitement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EtatTraitement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR EtatTraitement</label>
    <type>Checkbox</type>
</CustomField>