force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Evenement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Evenement__c</fullName>
    <label>Evènement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EVT_ADRESSE_CONTACT_PARENT</fullName>
                <label>Modification Adresse Contact Parent</label>
            </value>
            <value>
                <fullName>EVT_AUTORITE_PARENTALE</fullName>
                <label>Modification Autorité Parentale</label>
            </value>
            <value>
                <fullName>EVT_NUMERO_ALLOCATAIRE</fullName>
                <label>Modification Numéro Allocataire</label>
            </value>
            <value>
                <fullName>EVT_SITUATION_HANDICAPE_ENFANT</fullName>
                <label>Modification Situation Handicapé Enfant</label>
            </value>
            <value>
                <fullName>EVT_TYPE_ACCUEIL</fullName>
                <label>Modification Type Accueil</label>
            </value>
            <value>
                <fullName>EVT_TYPE_PLANNING</fullName>
                <label>Modification Type Planning</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_ENFANT_FRATRIE</fullName>
                <label>Modification Nombre Enfant Fratrie</label>
            </value>
            <value>
                <fullName>EVT_MONTANT_RESSOURCE</fullName>
                <label>Modification Montant Ressource</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_JOUR_CONGE</fullName>
                <label>Modification Nombre Jour Congé</label>
            </value>
            <value>
                <fullName>EVT_DATE_FIN_CONTRAT</fullName>
                <label>Date Fin Contrat</label>
            </value>
            <value>
                <fullName>EVT_SECTION</fullName>
                <label>Modification Section</label>
            </value>
            <value>
                <fullName>EVT_DATE_NAISSANCE_ENFANT</fullName>
                <label>Date Naissance Enfant</label>
            </value>
            <value>
                <fullName>EVT_MODE_GARDE</fullName>
                <label>Modification Mode Garde</label>
            </value>
            <value>
                <fullName>EVT_SITUATION_FAMILIALE</fullName>
                <label>Modification Situation Familiale</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_MOIS_MENSUALISE</fullName>
                <label>Modification Nombre Mois Mensualisé</label>
            </value>
            <value>
                <fullName>EVT_TRAITEMENT_JOUR_FERIE</fullName>
                <label>Modification Traitement Jour férié</label>
            </value>
            <value>
                <fullName>EVT_DELAI_CARENCE</fullName>
                <label>Modification Délai Carence</label>
            </value>
            <value>
                <fullName>EVT_HEURE_SUPPLEMENTAIRE</fullName>
                <label>Modification Heure Supplémentaire MAC</label>
            </value>
            <value>
                <fullName>EVT_HEURE_OCCASIONNEL</fullName>
                <label>Modification Heure Occasionnel MAC</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_CONGES_NON_PRIS</fullName>
                <label>Modification Nombre Congés non pris MAC</label>
            </value>
            <value>
                <fullName>EVT_HEURE_DEDUITE</fullName>
                <label>Modification Heure Déduite MAC</label>
            </value>
            <value>
                <fullName>EVT_VALIDATION_CONTRAT_DIRECTRICE</fullName>
                <label>Validation Contrat Directrice</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_DE_REPAS</fullName>
                <label>Nombre de repas</label>
            </value>
            <value>
                <fullName>EVT_FACTURATION_ADAPTATION</fullName>
                <label>Modification Facturation Adaptation</label>
            </value>
            <value>
                <fullName>EVT_COMMENTAIRE_INDIVIDUEL_FACTURE</fullName>
                <label>Commentaire individuel facture</label>
            </value>
            <value>
                <fullName>EVT_COMMENTAIRE_GLOBAL_FACTURE</fullName>
                <label>Commentaire global facture</label>
            </value>
            <value>
                <fullName>EVT_ABSCENCE</fullName>
                <label>Absence</label>
            </value>
            <value>
                <fullName>EVT_NOMBRE_HEURES_REALISEE</fullName>
                <label>NB Heures réalisées</label>
            </value>
            <value>
                <fullName>EVT_REGULARISATION</fullName>
                <label>Regularisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>