force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>