force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Garde__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Garde__c</fullName>
    <label>Garde</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_SituationFamiliale__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorité parentale conjointe</fullName>
            </value>
            <value>
                <fullName>Garde alternée</fullName>
            </value>
            <value>
                <fullName>Garde parent unique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>