force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_HeureDateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDateDebut__c</fullName>
    <label>Date et heure de début</label>
    <type>DateTime</type>
</CustomField>