force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_HeureDateFin__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDateFin__c</fullName>
    <label>Date et heure de fin</label>
    <type>DateTime</type>
</CustomField>