force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_IdExterneContact__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterneContact__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>