force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_IDUnique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDUnique__c</fullName>
    <label>ID Unique</label>
    <length>100</length>
    <type>Text</type>
</CustomField>