force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Modifications Entrantes</relationshipLabel>
    <relationshipName>Modifications_Entrantes</relationshipName>
    <type>Lookup</type>
</CustomField>