force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_MotifHeureDeduire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifHeureDeduire__c</fullName>
    <label>Motif Heure à déduire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maladie</fullName>
            </value>
            <value>
                <fullName>Sans pointage</fullName>
            </value>
            <value>
                <fullName>Hospitalisation</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
            <value>
                <fullName>Fermeture crèche exceptionnelle</fullName>
            </value>
            <value>
                <fullName>Période d&apos;adaptation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>