force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_MotifRegularisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifRegularisation__c</fullName>
    <label>Motif Régularisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heures supplémentaires</fullName>
            </value>
            <value>
                <fullName>Maladie</fullName>
            </value>
            <value>
                <fullName>Hospitalisation</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>