force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Nom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Nom__c</fullName>
    <label>Nom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>