force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_OuiNon__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OuiNon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oui/Non</label>
    <type>Checkbox</type>
</CustomField>