force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Pays__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Pays__c</fullName>
    <label>Pays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>