force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Prenom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Prenom__c</fullName>
    <label>Prénom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>