force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_RessourceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourceFamille__c</fullName>
    <label>Ressource Famille</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>