force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Rue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Rue__c</fullName>
    <label>Rue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>