force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Section__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bébé</fullName>
            </value>
            <value>
                <fullName>Moyen</fullName>
            </value>
            <value>
                <fullName>Grands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>