force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_SituationFamiliale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SituationFamiliale__c</fullName>
    <label>Situation familiale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En couple</fullName>
            </value>
            <value>
                <fullName>Monoparentale</fullName>
            </value>
            <value>
                <fullName>Marié / Pacsé</fullName>
            </value>
            <value>
                <fullName>Divorcé</fullName>
            </value>
            <value>
                <fullName>Célibataire géographique</fullName>
            </value>
            <value>
                <fullName>Famille recomposée</fullName>
            </value>
            <value>
                <fullName>Veuf / Veuve</fullName>
            </value>
            <value>
                <fullName>Séparé</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>