force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A valider</fullName>
                <default>true</default>
                <label>A valider</label>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>