force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Tel1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Tel1__c</fullName>
    <label>LPCR_Tel1</label>
    <type>Phone</type>
</CustomField>