force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_Tel2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Tel2__c</fullName>
    <label>LPCR_Tel2</label>
    <type>Phone</type>
</CustomField>