force-app/main/default/objects/LPCR_ModificationEntrante__c/fields/LPCR_TypeAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAccueil__c</fullName>
    <label>Type Accueil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Tournant</fullName>
            </value>
            <value>
                <fullName>Multiplanning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>