force-app/main/default/objects/LPCR_ModificationEntrante__c/listViews/Toutes_les_modifications_entrantes.listView-meta.xml
<ListView>
    <fullName>Toutes_les_modifications_entrantes</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>LPCR_DateEffet__c</columns>
    <columns>LPCR_EtatTraitement__c</columns>
    <columns>LPCR_Evenement__c</columns>
    <columns>LPCR_Compte__c</columns>
    <columns>LPCR_Contact__c</columns>
    <columns>LPCR_Devis__c</columns>
    <columns>LPCR_Contract__c</columns>
    <filterScope>Mine</filterScope>
    <label>Toutes les modifications entrantes</label>
</ListView>